BusOne/src/objects/Order_Campaign_vod__c.object
<CustomObject>
    <description>Campaigns group together pricing rules, which are part of a promotion specified for a group of accounts, a territory or region, or a specific product.</description>
    <fields>
        <fullName>Account_Group_vod__c</fullName>
        <description>Limits Order Campaign to this Account Group</description>
        <label>Account Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type_vod__c</fullName>
        <description>Values need to match the values of Account recordtype
Limits Order Campaign to this Account Type</description>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Customer - Direct</fullName>
                </value>
                <value>
                    <fullName>Customer - Channel</fullName>
                </value>
                <value>
                    <fullName>Channel Partner / Reseller</fullName>
                </value>
                <value>
                    <fullName>Installation Partner</fullName>
                </value>
                <value>
                    <fullName>Technology Partner</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Professional_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field has been deprecated and is no longer in use</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Default campaign</description>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>Short textual description of the Order Campaign.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date_vod__c</fullName>
        <description>Campaign end date</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Campaign_Bound_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, then only pricing rules from this campaign can be applied to Order Lines. If unchecked, then pricing rules that have no specified campaign can also be applied.</description>
        <label>Order Campaign Bound</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Record_Type_vod__c</fullName>
        <description>The type of order the campaign is valid for.</description>
        <label>Order Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All_vod</fullName>
                </value>
                <value>
                    <fullName>Transfer_vod</fullName>
                </value>
                <value>
                    <fullName>Direct_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date_vod__c</fullName>
        <description>Campaign start date</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Order Campaign</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Order Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>EndDate_After_StartDate_vod</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(NOT(ISNULL(Start_Date_vod__c)), NOT(ISNULL(End_Date_vod__c))), Start_Date_vod__c &gt; End_Date_vod__c,false)</errorConditionFormula>
        <errorMessage>Start date after end date</errorMessage>
    </validationRules>
</CustomObject>